--- a/config/content.htm
+++ b/config/content.htm
@@ -293,18 +293,16 @@ end</pre>
 <p><img alt="" class="add_border" height="282" src="/images/meArm_linkage_dimension.png" width="600"/></p>
 <p>(From: <a href="/downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a>)</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2pFReCfDZsU" title="YouTube video player" width="560"></iframe></p>
+<h1>Oneshape繪圖</h1>
 <h2>CAD1 Oneshape</h2>
-<p><span>1.</span><b>Onshape</b><span>為免費線上3D繪圖軟體，不需購買授權軟體即可使用。</span></p>
-<p><span> 2.支援瀏覽器操作，並有iOS、Android軟體支援。</span></p>
-<p><span> 3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。 </span></p>
-<p><span>4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。</span></p>
+<br/><span>1.</span><b>Onshape</b><span>為免費線上3D繪圖軟體，不需購買授權軟體即可使用。</span>
+<h3><span> 2.支援瀏覽器操作，並有iOS、Android軟體支援。</span></h3>
+<h3><span> 3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。 </span></h3>
+<h3><span>4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。</span></h3>
 <p></p>
-<h3>CAD1 操作流程</h3>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<h2>CAD1 Oneshape 操作流程</h2>
+<p></p>
+<p></p>
 <h2>CAD2 繪圖</h2>
 <p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD2 緣起說明與介紹</p>
