--- a/content/3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。.html
+++ b/content/3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='Oneshape繪圖.html'>Oneshape繪圖</a><ul class='dropdown'><li class='has-children'><a href='CAD1 Oneshape.html'>CAD1 Oneshape</a><ul class='dropdown'><li><a href='2.支援瀏覽器操作，並有iOS、Android軟體支援。.html'>2.支援瀏覽器操作，並有iOS、Android軟體支援。</a><li><a href='3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。.html'>3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。</a><li><a href='4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。.html'>4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。</a></li></ul><li><a href='CAD1 Oneshape 操作流程.html'>CAD1 Oneshape 操作流程</a><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,11 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='CAD1 安裝配置.html'>Next</a> >> CAD1 安裝配置<br /><h1>CAD1 繪圖</h1>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='CAD1 安裝配置.html'>Next</a> >> CAD1 安裝配置</div>
+    <div id="tipue_search_content">2.支援瀏覽器操作，並有iOS、Android軟體支援。 << <a href='2.支援瀏覽器操作，並有iOS、Android軟體支援。.html'>Previous</a> <a href='4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。.html'>Next</a> >> 4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。<br /><h1>3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。</h1>
+<br />2.支援瀏覽器操作，並有iOS、Android軟體支援。 << <a href='2.支援瀏覽器操作，並有iOS、Android軟體支援。.html'>Previous</a> <a href='4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。.html'>Next</a> >> 4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。</div>
         
     <!-- footer -->
       <div class="container">
