--- a/content/4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。.html
+++ b/content/4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">RUN << <a href='RUN.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>Work history</h1>
-<br />RUN << <a href='RUN.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+    <div id="tipue_search_content">3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。 << <a href='3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。.html'>Previous</a> <a href='CAD1 Oneshape 操作流程.html'>Next</a> >> CAD1 Oneshape 操作流程<br /><h1>4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。</h1>
+<p></p>
+<br />3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。 << <a href='3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。.html'>Previous</a> <a href='CAD1 Oneshape 操作流程.html'>Next</a> >> CAD1 Oneshape 操作流程</div>
         
     <!-- footer -->
       <div class="container">
