--- a/content/CAD2 繪圖.html
+++ b/content/CAD2 繪圖.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 Oneshape.html'>CAD1 Oneshape</a><ul class='dropdown'><li><a href='2.支援瀏覽器操作，並有iOS、Android軟體支援。.html'>2.支援瀏覽器操作，並有iOS、Android軟體支援。</a><li><a href='3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。.html'>3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。</a><li><a href='4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。.html'>4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。</a></li></ul><li class='has-children'><a href='CAD1 Oneshape 操作流程.html'>CAD1 Oneshape 操作流程</a><ul class='dropdown'><li><a href='1.先到Oneshape的網站上註冊帳號.html'>1.先到Oneshape的網站上註冊帳號</a><li><a href='2.註冊完的畫面 這樣就註冊完成啦~.html'>2.註冊完的畫面 這樣就註冊完成啦~</a><li><a href='3.進到Oneshape的工作首頁，點擊左上的建立在按文件，就可以開始準備繪圖了.html'>3.進到Oneshape的工作首頁，點擊左上的建立在按文件，就可以開始準備繪圖了</a><li><a href='4.進到Oneshape的工作畫面.html'>4.進到Oneshape的工作畫面</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 Oneshape.html'>CAD1 Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a></li></ul><li class='has-children'><a href='CAD1 Oneshape 操作流程.html'>CAD1 Oneshape 操作流程</a><ul class='dropdown'><li><a href='操作流程.html'>操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,11 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">4.進到Oneshape的工作畫面 << <a href='4.進到Oneshape的工作畫面.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置<br /><h1>CAD2 繪圖</h1>
+    <div id="tipue_search_content">操作流程 << <a href='操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置<br /><h1>CAD2 繪圖</h1>
 <p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD2 緣起說明與介紹</p>
 <p>請不要直接從找到的 CAD2 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<br />4.進到Oneshape的工作畫面 << <a href='4.進到Oneshape的工作畫面.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置</div>
+<br />操作流程 << <a href='操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置</div>
         
     <!-- footer -->
       <div class="container">
