--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -303,7 +303,7 @@ end</pre>
 <h3>CAD1 Oneshape 操作流程</h3>
 <h4>1.先到Oneshape的網站上註冊帳號</h4>
 <h4><img alt="" height="315" src="/images/1.jpg" width="560"/></h4>
-<h4>2.註冊完的畫面 這樣就註冊完成啦~</h4>
+<h4>2.註冊完的畫面 這樣就註冊完成啦</h4>
 <h4><img alt="" height="310" src="/images/2.jpg" width="551"/></h4>
 <h4>3.進到Oneshape的工作首頁，點擊左上的建立在按文件，就可以開始準備繪圖了</h4>
 <h4><img alt="" height="314" src="/images/3.jpg" width="558"/></h4>
