--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -293,7 +293,7 @@ end</pre>
 <p><img alt="" class="add_border" height="282" src="/images/meArm_linkage_dimension.png" width="600"/></p>
 <p>(From: <a href="/downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a>)</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2pFReCfDZsU" title="YouTube video player" width="560"></iframe></p>
-<h2>CAD1 Oneshape</h2>
+<h2>Oneshape</h2>
 <h3>Oneshape介紹</h3>
 <h4><br/><span>1.</span><b>Onshape</b><span>為免費線上3D繪圖軟體，不需購買授權軟體即可使用。</span></h4>
 <h4><span> 2.支援瀏覽器操作，並有iOS、Android軟體支援。</span></h4>
@@ -309,21 +309,13 @@ end</pre>
 <h4><img alt="" height="314" src="/images/3.jpg" width="558"/></h4>
 <h4>4.進到Oneshape的工作畫面，這樣就完成了</h4>
 <h4><img alt="" height="318" src="/images/4.jpg" width="565"/></h4>
-<h2>CAD2 繪圖</h2>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD2 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<h3>CAD2 安裝配置</h3>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 套件下載安裝與配置</p>
-<p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h3>CAD2 操作流程</h3>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<h2>CAD2 NX</h2>
+<h3>NX 介紹</h3>
+<p><b>NX</b><span>，又稱為</span><b>NX Unigraphics</b><span>，或簡稱為</span><b>U-G</b><span>，是</span><a href="https://zh.wikipedia.org/wiki/%E8%A5%BF%E9%97%A8%E5%AD%90PLM%E8%BD%AF%E4%BB%B6" title="西門子PLM軟體">西門子PLM軟體</a><span>開發的一款高階的</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E8%AE%BE%E8%AE%A1" title="電腦輔助設計">CAD</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%B7%A5%E7%A8%8B" title="電腦輔助工程">CAE</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%88%B6%E9%80%A0" title="電腦輔助製造">CAM</a><span>軟體。</span><b>NX</b><span>，又稱為</span><b>NX Unigraphics</b><span>，或簡稱為</span><b>U-G</b><span>，是</span><a href="https://zh.wikipedia.org/wiki/%E8%A5%BF%E9%97%A8%E5%AD%90PLM%E8%BD%AF%E4%BB%B6" title="西門子PLM軟體">西門子PLM軟體</a><span>開發的一款高階的</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E8%AE%BE%E8%AE%A1" title="電腦輔助設計">CAD</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%B7%A5%E7%A8%8B" title="電腦輔助工程">CAE</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%88%B6%E9%80%A0" title="電腦輔助製造">CAM</a><span>軟體。</span></p>
+<p><span><b>NX</b><span><span> </span>設計工具可輕易地解決複雜的幾何資料及大型組立件。<span> </span></span><b>NX</b><span><span> </span>透過先進的模擬功能來處理最棘手的CAE 挑戰，大幅減少實體原型的需要。 此外，</span><b>NX</b><span><span> </span>更藉由最先進的工裝/模具與機械加工技術優勢，協助您提升製造水準。<span> </span></span><b>NX</b><span><span> </span>的開放式架構讓您得以透過數位產品開發流程隨時整合來自其他廠商的解決方案，保護現有的IT 投資效益。</span></span></p>
+<p></p>
+<h3>NX 操作流程</h3>
+<p></p>
 <h2>運動場景</h2>
 <h4>CAD1:</h4>
 <p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
@@ -335,7 +327,30 @@ end</pre>
 <p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
 <h2>W13</h2>
-<pre><code>請建立一個 Wink 檔案說明截至目前所完成的兩套 CAD 零組件繪圖進度 (30%).<br/><br/></code></pre><h1>HW1-1</h1>
+<pre><code>請建立一個 Wink 檔案說明截至目前所完成的兩套 CAD 零組件繪圖進度 (30%).<br/><br/><br/><br/></code></pre>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/01.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<h1>HW1-1</h1>
 <p>HW1-1 佔學期成績 15%</p>
 <p><span style="background-color: #ffff99;">HW1-1 必須在 2021.12.01 22:00 之前完成.<br/></span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/6">HW1-1 具體項目成果回報區</a>將於 2021.11.18 開啟, 於 <span style="background-color: #ff99cc;">2021.12.01 22:00 關閉.</span></p>
