--- a/content/NX 介紹.html
+++ b/content/NX 介紹.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 Oneshape.html'>CAD1 Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='CAD1 Oneshape 操作流程.html'>CAD1 Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Oneshape.html'>Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='Oneshape 操作流程.html'>Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 NX.html'>CAD2 NX</a><ul class='dropdown'><li><a href='NX 介紹.html'>NX 介紹</a><li><a href='NX 操作流程.html'>NX 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='Oneshape介紹.html'>Next</a> >> Oneshape介紹<br /><h1>CAD1 Oneshape</h1>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Oneshape介紹.html'>Next</a> >> Oneshape介紹</div>
+    <div id="tipue_search_content">CAD2 NX << <a href='CAD2 NX.html'>Previous</a> <a href='NX 操作流程.html'>Next</a> >> NX 操作流程<br /><h1>NX 介紹</h1>
+<p><b>NX</b><span>，又稱為</span><b>NX Unigraphics</b><span>，或簡稱為</span><b>U-G</b><span>，是</span><a href="https://zh.wikipedia.org/wiki/%E8%A5%BF%E9%97%A8%E5%AD%90PLM%E8%BD%AF%E4%BB%B6" title="西門子PLM軟體">西門子PLM軟體</a><span>開發的一款高階的</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E8%AE%BE%E8%AE%A1" title="電腦輔助設計">CAD</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%B7%A5%E7%A8%8B" title="電腦輔助工程">CAE</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%88%B6%E9%80%A0" title="電腦輔助製造">CAM</a><span>軟體。</span><b>NX</b><span>，又稱為</span><b>NX Unigraphics</b><span>，或簡稱為</span><b>U-G</b><span>，是</span><a href="https://zh.wikipedia.org/wiki/%E8%A5%BF%E9%97%A8%E5%AD%90PLM%E8%BD%AF%E4%BB%B6" title="西門子PLM軟體">西門子PLM軟體</a><span>開發的一款高階的</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E8%AE%BE%E8%AE%A1" title="電腦輔助設計">CAD</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%B7%A5%E7%A8%8B" title="電腦輔助工程">CAE</a><span>/</span><a href="https://zh.wikipedia.org/wiki/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BE%85%E5%8A%A9%E5%88%B6%E9%80%A0" title="電腦輔助製造">CAM</a><span>軟體。</span></p>
+<p><span><b>NX</b><span><span> </span>設計工具可輕易地解決複雜的幾何資料及大型組立件。<span> </span></span><b>NX</b><span><span> </span>透過先進的模擬功能來處理最棘手的CAE 挑戰，大幅減少實體原型的需要。 此外，</span><b>NX</b><span><span> </span>更藉由最先進的工裝/模具與機械加工技術優勢，協助您提升製造水準。<span> </span></span><b>NX</b><span><span> </span>的開放式架構讓您得以透過數位產品開發流程隨時整合來自其他廠商的解決方案，保護現有的IT 投資效益。</span></span></p>
+<p></p>
+<br />CAD2 NX << <a href='CAD2 NX.html'>Previous</a> <a href='NX 操作流程.html'>Next</a> >> NX 操作流程</div>
         
     <!-- footer -->
       <div class="container">
