--- a/content/Oneshape介紹.html
+++ b/content/Oneshape介紹.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 Oneshape.html'>CAD1 Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='CAD1 Oneshape 操作流程.html'>CAD1 Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Oneshape.html'>Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='Oneshape 操作流程.html'>Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 NX.html'>CAD2 NX</a><ul class='dropdown'><li><a href='NX 介紹.html'>NX 介紹</a><li><a href='NX 操作流程.html'>NX 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,13 +139,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CAD1 Oneshape << <a href='CAD1 Oneshape.html'>Previous</a> <a href='CAD1 Oneshape 操作流程.html'>Next</a> >> CAD1 Oneshape 操作流程<br /><h1>Oneshape介紹</h1>
+    <div id="tipue_search_content">Oneshape << <a href='Oneshape.html'>Previous</a> <a href='Oneshape 操作流程.html'>Next</a> >> Oneshape 操作流程<br /><h1>Oneshape介紹</h1>
 <h4><br/><span>1.</span><b>Onshape</b><span>為免費線上3D繪圖軟體，不需購買授權軟體即可使用。</span></h4>
 <h4><span> 2.支援瀏覽器操作，並有iOS、Android軟體支援。</span></h4>
 <h4><span> 3.CAD繪圖軟體，並可輸出圖檔供CNC、3D印表機、雷射切割機使用。 </span></h4>
 <h4><span>4.從淺到深的3D建模教學內容，使初學者可快速上手，並製作出自己的作品。</span></h4>
 <p></p>
-<br />CAD1 Oneshape << <a href='CAD1 Oneshape.html'>Previous</a> <a href='CAD1 Oneshape 操作流程.html'>Next</a> >> CAD1 Oneshape 操作流程</div>
+<br />Oneshape << <a href='Oneshape.html'>Previous</a> <a href='Oneshape 操作流程.html'>Next</a> >> Oneshape 操作流程</div>
         
     <!-- footer -->
       <div class="container">
