--- a/content/CAD2 NX.html
+++ b/content/CAD2 NX.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 Oneshape.html'>CAD1 Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='CAD1 Oneshape 操作流程.html'>CAD1 Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Oneshape.html'>Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='Oneshape 操作流程.html'>Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 NX.html'>CAD2 NX</a><ul class='dropdown'><li><a href='NX 介紹.html'>NX 介紹</a><li><a href='NX 操作流程.html'>NX 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,12 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CAD2 繪圖 << <a href='CAD2 繪圖.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程<br /><h1>CAD2 安裝配置</h1>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 套件下載安裝與配置</p>
-<p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<br />CAD2 繪圖 << <a href='CAD2 繪圖.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程</div>
+    <div id="tipue_search_content">Oneshape 操作流程 << <a href='Oneshape 操作流程.html'>Previous</a> <a href='NX 介紹.html'>Next</a> >> NX 介紹<br /><h1>CAD2 NX</h1>
+<br />Oneshape 操作流程 << <a href='Oneshape 操作流程.html'>Previous</a> <a href='NX 介紹.html'>Next</a> >> NX 介紹</div>
         
     <!-- footer -->
       <div class="container">
