--- a/content/Oneshape 操作流程.html
+++ b/content/Oneshape 操作流程.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 Oneshape.html'>CAD1 Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='CAD1 Oneshape 操作流程.html'>CAD1 Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='HWpages.html'>HWpages</a></li></ul><li><a href='RUN.html'>RUN</a><li><a href='Work history.html'>Work history</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Oneshape.html'>Oneshape</a><ul class='dropdown'><li><a href='Oneshape介紹.html'>Oneshape介紹</a><li><a href='Oneshape 操作流程.html'>Oneshape 操作流程</a></li></ul><li class='has-children'><a href='CAD2 NX.html'>CAD2 NX</a><ul class='dropdown'><li><a href='NX 介紹.html'>NX 介紹</a><li><a href='NX 操作流程.html'>NX 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,13 +139,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CAD2 安裝配置 << <a href='CAD2 安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景<br /><h1>CAD2 操作流程</h1>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<br />CAD2 安裝配置 << <a href='CAD2 安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景</div>
+    <div id="tipue_search_content">Oneshape介紹 << <a href='Oneshape介紹.html'>Previous</a> <a href='CAD2 NX.html'>Next</a> >> CAD2 NX<br /><h1>Oneshape 操作流程</h1>
+<h4>1.先到Oneshape的網站上註冊帳號</h4>
+<h4><img alt="" height="315" src="./../images/1.jpg" width="560"/></h4>
+<h4>2.註冊完的畫面 這樣就註冊完成啦</h4>
+<h4><img alt="" height="310" src="./../images/2.jpg" width="551"/></h4>
+<h4>3.進到Oneshape的工作首頁，點擊左上的建立在按文件，就可以開始準備繪圖了</h4>
+<h4><img alt="" height="314" src="./../images/3.jpg" width="558"/></h4>
+<h4>4.進到Oneshape的工作畫面，這樣就完成了</h4>
+<h4><img alt="" height="318" src="./../images/4.jpg" width="565"/></h4>
+<br />Oneshape介紹 << <a href='Oneshape介紹.html'>Previous</a> <a href='CAD2 NX.html'>Next</a> >> CAD2 NX</div>
         
     <!-- footer -->
       <div class="container">
