--- a/content/W13-1.html
+++ b/content/W13-1.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,27 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">RUN << <a href='RUN.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>Work history</h1>
-<br />RUN << <a href='RUN.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+    <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='W13-2.html'>Next</a> >> W13-2<br /><h1>W13-1</h1>
+<pre><code>請建立一個 Wink 檔案說明截至目前所完成的兩套 CAD 零組件繪圖進度 (30%).<br/><br/><br/><br/></code></pre>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/01.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<br />W13 << <a href='W13.html'>Previous</a> <a href='W13-2.html'>Next</a> >> W13-2</div>
         
     <!-- footer -->
       <div class="container">
