--- a/content/期末考.html
+++ b/content/期末考.html
@@ -158,7 +158,7 @@ frameStops: {
 <source src="./../downloads/final test.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass">  心得:這學期結束了，一開始分配到兩個新的程式，也剛好被分到兩個都不會的程式，也就是NX跟onshape，但是</div>
+<div class="winkVideoControlBarProgressLeftClass" style="text-align: left;"> 心得:這學期結束了，一開始分配到兩個新的程式，也剛好被分到兩個都不會的程式，也就是NX跟onshape，還好最後發現繪圖邏輯是一樣的，</div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
