--- a/config/content.htm
+++ b/config/content.htm
@@ -373,8 +373,7 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h1>HW1-1</h1>
+</div><h1>HW1-1</h1>
 <p>HW1-1 佔學期成績 15%</p>
 <p><span style="background-color: #ffff99;">HW1-1 必須在 2021.12.01 22:00 之前完成.<br/></span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/6">HW1-1 具體項目成果回報區</a>將於 2021.11.18 開啟, 於 <span style="background-color: #ff99cc;">2021.12.01 22:00 關閉.</span></p>
@@ -439,10 +438,32 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p>
-<h1>期末考試</h1>
+<p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p><h1>期末考試</h1>
 <p>第一階段</p>
 <p><a href="https://drive.google.com/drive/u/0/folders/1Oz6yAv9pGRogjfJHEjGCl-wWR3z7r5kq">零件檔案</a></p>
 <p><img alt="" height="1080" src="/images/零件.jpg" width="1920"/></p>
 <p>組合過程</p>
-<p><a href="https://youtu.be/UZCKvx0ic8U">https://youtu.be/UZCKvx0ic8U</a></p></div></div>
+<p><a href="https://youtu.be/UZCKvx0ic8U">https://youtu.be/UZCKvx0ic8U</a></p>
+<p>------------------------------------------------------------------------------------</p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="/downloads/0116.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div></div></div>
