--- a/content/Final Project.html
+++ b/content/Final Project.html
@@ -168,8 +168,7 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p>
-<br />HW3 << <a href='HW3.html'>Previous</a> <a href='期末考試.html'>Next</a> >> 期末考試</div>
+<p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p><br />HW3 << <a href='HW3.html'>Previous</a> <a href='期末考試.html'>Next</a> >> 期末考試</div>
         
     <!-- footer -->
       <div class="container">
