--- a/content/W13-2.html
+++ b/content/W13-2.html
@@ -164,8 +164,7 @@ frameStops: {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<br />W13-1 << <a href='W13-1.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
+</div><br />W13-1 << <a href='W13-1.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
         
     <!-- footer -->
       <div class="container">
