--- a/content/Final Project.html
+++ b/content/Final Project.html
@@ -142,7 +142,7 @@ img.add_border {
     <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <a href='期末考試.html'>Next</a> >> 期末考試<br /><h1>Final Project</h1>
 <p></p>
 <p><span style="background-color: #ffff99;"></span></p>
-<p><strong>零件檔影片</strong></p>
+<p><strong>零件檔影片~</strong></p>
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KdtZpSYeQEU" width="560"></iframe></p>
 <p>wink final test</p>
