--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -412,7 +412,7 @@ frameStops: {
 <h1>Final Project</h1>
 <p></p>
 <p><span style="background-color: #ffff99;"></span></p>
-<p><strong>零件檔影片</strong></p>
+<p><strong>零件檔影片~</strong></p>
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KdtZpSYeQEU" width="560"></iframe></p>
 <p>wink final test</p>
@@ -464,7 +464,7 @@ frameStops: {
 </div>
 <p>心得:這學期學到很多東西，一開始被分配到兩個繪圖軟體.，分別是NX跟onshape，這兩個繪圖軟體對我來說都是新的東西，剛開始很排斥畫，到後來開始做作業的時候，發現繪圖邏輯都是一樣的，只有按鈕長的不一樣，後來又學到coppeliasim要組機械手臂，那真的很難，但到後來詢問組長和同住的室友就有比較了解，謝謝老師這學期的教導。</p><h1>期末考試</h1>
 <p>第一階段檔案加影片</p>
-<p><a href="https://drive.google.com/drive/u/0/folders/1Oz6yAv9pGRogjfJHEjGCl-wWR3z7r5kq">零件檔案</a></p>
+<p><a href="https://drive.google.com/drive/u/1/folders/1fgqM0DY6H7dmao1X9OO639MftC6b1xo_">零件檔案</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ejGBtUKf-S0" width="560"></iframe>所有零件</p>
 <p><img caption="false" height="1080" src="https://40923228.github.io/cad2021_hw/images/%E9%9B%B6%E4%BB%B6.jpg" width="1920"/></p>
 <p></p>
@@ -473,6 +473,7 @@ frameStops: {
 <p>組合過程</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/UZCKvx0ic8U" width="560"></iframe></p>
 <p>第三階段</p>
+<p><a href="https://drive.google.com/drive/u/1/folders/1wdbr03ZJW_Z6h8fDmSMtoMKqXPXley3Z">wink</a></p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
